--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
     "react-markdown": "^10.1.0",
-    "zod": "^4.0.14"
+    "zod": "^4.0.14",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
