--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@tanstack/react-query": "^5.84.1",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "15.3.5",
