--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
